# Monadics-Instructions

./: README.md  STYLEGUIDE.md  gitguide.md  summera-tal-task-2
summera-tal/: kth_javap_sumsort.hs  sssuresh-task-2-summer_tal_code.hs
task-10-simulation/: README.md
task-10-simulation/examples/traditional-random-walk/: traditional-random-walk.cabal
task-10-simulation/examples/traditional-random-walk/app/: Main.hs
task-11-sorting/: README.md
task-12-raycasting/: README.md
task-12-raycasting/haskell-gloss-template/: haskell-gloss-template.cabal
task-12-raycasting/haskell-gloss-template/app/: Main.hs
task-13-raytracer/: README.md
task-14-rust/: README.md
task-15-prolog/: README.md
task-16-hash/: README.md
task-17-graphs/: README.md
task-17-graphs/kattis_templates/haskell/: kattis.cabal
task-17-graphs/kattis_templates/haskell/app/: Main.hs
task-18-boid/: README.md  README_ml.md
task-2-haskell-intro/: README.md
task-2-haskell-intro/minimal_scalar_product/: minimal-scalar-product.cabal
task-2-haskell-intro/minimal_scalar_product/app/: Main.hs
task-3-type-class/: README.md
task-4-othello/: README.md
task-4-othello/othello-template/: othello.cabal
task-4-othello/othello-template/app/: Main.hs
task-4-othello/othello-template/lib/: Othello.hs
task-6-othello-gui/: README.md
task-6-othello-gui/gloss-template/: othello.cabal
task-6-othello-gui/gloss-template/app/: Main.hs
task-7-clang/: README.md
task-7-clang/kattis_template/: main.c
task-8-assembly/: README.md
task-8-assembly/examples/hello-world/: hello-world-function.asm  hello.world-application.asm
task-8-assembly/examples/input-output/: io.asm
task-8-assembly/sieve/: template.asm
task-9-isa/: README.md
task-9-isa/bbvv/: specification.md
task-9-isa/bbvv/rust-compiler/: README.md  output.bbvvexe
task-9-isa/bbvv/rust-compiler/bbvv-compiler/src/: compiler.rs  main.rs
task-quicksort/: README.md
