cabal-version:      3.14
name:               haskell-gloss-template
version:            0.1.0.0
-- synopsis:
-- description:
author:             Mikael Kemstedt
maintainer:         kemstedt@kth.se
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable haskell-gloss-template
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   app
    default-language: GHC2024
    build-depends:    
        base ^>=4.21.0.0,
        gloss,
        gloss-juicy