cabal-version:      3.14
name:               othello
version:            0.1.0.0
author:             Mikael Kemstedt
maintainer:         kemstedt@kth.se
build-type:         Simple

common basics
    default-language: GHC2024

library
    import:           basics
    exposed-modules:  Othello
    hs-source-dirs:   lib
    build-depends:    
        base ^>=4.21.0.0

executable othello
    import:           basics
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base ^>=4.21.0.0,
        othello


test-suite othello-test
    import:           basics
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    build-depends:
        base ^>=4.21.0.0,
        othello
